--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="./css/main.css">
+   <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width: 760px)">
+   <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width: 1440px)">
     <title>Encriptación</title>
 </head>
 <body>
@@ -12,26 +17,33 @@
             <img src="./img/logo.png" alt="Logo de Alura">
         </figure>
     </header>
-    <main class="container">
-        <section class="text-container">
-            <textarea name="text" id="text" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
-            <span class="info"><p>Solo letras minúsculas y sin acentos</p></span>
-        </section>
-        <section class="buttons-container">
-            <form action="/">
-                <input type="button" value="Encriptar" class="btn encrypt-btn">
-                <input type="button" value="Encriptar" class="btn dencrypt-btn">
-            </form>
-        </section>
+    <main>
+        <div class="container">
+            <section class="text-container__area">
+                <textarea name="text" id="text" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
+                <div class="text-container__info">
+                    <img src="./img/info.png" alt="info"><p>Solo letras minúsculas y sin acentos</p>
+                </div>
+            </section>
+            <section class="buttons-container">
+                <form action="/">
+                    <input type="button" value="Encriptar" class="btn encrypt-btn">
+                    <input type="button" value="Desencriptar" class="btn dencrypt-btn">
+                </form>
+            </section>
+        </div>
         <div class="result-container">
+            <figure>
+                <img src="./img/result-img.png" alt="Imágen del resultado">
+            </figure>
             <h1>Ningún mensaje fue encontrado</h1>
             <p>Ingrese antes el texto que desea encriptar o desencriptar</p>
             <form action="/">
-                <input type="button" value="Copiar">
+                <input type="button" value="Copiar" class="copy-btn">
             </form>
         </div>
     </main>
-    <footer>
+    <foote class="footer">
         <p>@mikeacb</p>
     </footer>
 </body>
