Corrección de mis datos personales

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
     <foote class="footer">
-        <p>@mikeacb</p>
+        <p>@mikeacb/@_mikeacb</p>
     </footer>
     <script src="index.js"></script>
 </body>
